# Financial-Statistics-and-Econometrics

./: .RData  .Rhistory  .gitignore  README.md  asset_pricing_tests.ipynb  forming_some_factors.ipynb  problem1.R  problem1.Rmd  pyproject.toml
.Rproj.user/BDC4EF72/: rmd-outputs
Excel Files for Problem 1 Year 2025 2026-20251209/: Problem1set1.xlsx  Problem1set12.xlsx  Problem1set16.xlsx  Problem1set18.xlsx  Problem1set2.xlsx  Problem1set21.xlsx  Problem1set25.xlsx  Problem1set26.xlsx  Problem1set28.xlsx  Problem1set3.xlsx  Problem1set7.xlsx  Problem1set9.xlsx
Excel Files for Problem 2 Year 2025- 2026-20251209/: Problem2set11.xlsx  Problem2set13.xlsx  Problem2set16.xlsx  Problem2set17.xlsx  Problem2set2.xlsx  Problem2set22.xlsx  Problem2set3.xlsx  Problem2set4.xlsx  Problem2set5.xlsx  Problem2set8.xlsx
Fin-stat/: problem1.R  problem1.Rmd  problem2.R  problem2.Rmd
Fin-stat/Excel Files for Problem 1 Year 2025 2026-20251209/: Problem1set10.xlsx  Problem1set11.xlsx  Problem1set13.xlsx  Problem1set14.xlsx  Problem1set15.xlsx  Problem1set17.xlsx  Problem1set19.xlsx  Problem1set20.xlsx  Problem1set22.xlsx  Problem1set23.xlsx  Problem1set24.xlsx  Problem1set27.xlsx  Problem1set4.xlsx  Problem1set5.xlsx  Problem1set6.xlsx  Problem1set8.xlsx
Fin-stat/Excel Files for Problem 2 Year 2025- 2026-20251209/: Problem2set1.xlsx  Problem2set10.xlsx  Problem2set12.xlsx  Problem2set14.xlsx  Problem2set15.xlsx  Problem2set18.xlsx  (+12 more)
R Script/: Financial Econometrics.Rmd
data/: 25 Size and BEME portfolios.csv  Data_FE.xlsx  Fama-French-factors.csv  Macroeconomic-factors.csv
(+9 files in other folders)
