[project]
name = "finecon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
